# penelope_pia

./: .gitignore  README.md  pyproject.toml  requirements.txt  scratch_test_game_mode.py
config/: personas.yaml  settings.yaml
penelope/: __init__.py  main.py
penelope/ai/: __init__.py  intent_parser.py  llm_client.py  memory.py
penelope/auth/: __init__.py  authenticator.py  permissions.py  profiles.py  session.py
penelope/core/: __init__.py  command_executor.py  event_bus.py  resource_optimizer.py  setup_wizard.py
penelope/persistence/: __init__.py  health_monitor.py  service_manager.py  watchdog.py
penelope/system/: __init__.py  clipboard_manager.py  window_manager.py  windows_control.py
penelope/ui/: __init__.py  event_bridge.py  hud_overlay.py  radial_menu.py  settings_panel.py  theme.py  tray_icon.py
penelope/utils/: __init__.py  ascii_art.py  constants.py  crypto.py  diagnostics.py  logger.py  system_info.py
penelope/voice/: __init__.py  audio_manager.py  stt.py  tts.py  wake_word.py
tests/: __init__.py  conftest.py  test_authenticator.py  test_command_executor_permissions.py  test_crypto.py  test_diagnostics.py  test_event_bus.py  test_intent_parser.py  test_profiles.py  test_resource_optimizer.py  test_session.py
