[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "penelope"
version = "0.1.0"
description = "Penélope — Assistente Pessoal de IA Local · Estilo Jarvis · Windows 11"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.11"
authors = [
    {name = "Pietro Nogueira"}
]

dependencies = [
    "ollama>=0.4.0",
    "faster-whisper>=1.0.0",
    "chromadb>=0.5.0",
    "PyQt6>=6.6.0",
    "sounddevice>=0.4.6",
    "numpy>=1.26.0",
    "pywinauto>=0.6.8",
    "pyautogui>=0.9.54",
    "pyyaml>=6.0",
    "cryptography>=42.0",
    "psutil>=5.9.0",
    "loguru>=0.7.0",
    "pycaw>=20240210",
    "comtypes>=1.3.0",
    "pyperclip>=1.8.2",
    "keyboard>=0.13.5",
    "Pillow>=10.0.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-qt>=4.3.0",
]

[project.scripts]
penelope = "penelope.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["penelope*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
